[gd_scene load_steps=4 format=3 uid="uid://8khmnptai4kr"]

[ext_resource type="Script" uid="uid://db2e7agnjf0ws" path="res://graph.gd" id="1_2637j"]
[ext_resource type="LabelSettings" uid="uid://bgesaj7o8v1fa" path="res://smallTemp.tres" id="2_2637j"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q2ojr"]

[node name="Graph" type="Node2D"]
material = SubResource("CanvasItemMaterial_q2ojr")
script = ExtResource("1_2637j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1530.0
offset_bottom = 392.0

[node name="Thermostat" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 2.0
default_color = Color(0, 1, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="OutsideTemperature" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 2.0
default_color = Color(0, 0, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="InsideTemperature" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 2.0
default_color = Color(1, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="TopLine" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 1.0
default_color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="BottomLine" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 1.0
default_color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="Label120" type="Label" parent="."]
offset_left = 36.0
offset_top = -13.0
offset_right = 87.0
offset_bottom = 21.0
text = "120°"
label_settings = ExtResource("2_2637j")
horizontal_alignment = 2

[node name="Label70" type="Label" parent="."]
offset_left = 41.0
offset_top = 87.0
offset_right = 82.0
offset_bottom = 121.0
text = "70°"
label_settings = ExtResource("2_2637j")
horizontal_alignment = 2

[node name="Label32" type="Label" parent="."]
offset_left = 42.0
offset_top = 164.0
offset_right = 83.0
offset_bottom = 198.0
text = "32°"
label_settings = ExtResource("2_2637j")
horizontal_alignment = 2

[node name="Label0" type="Label" parent="."]
offset_left = 40.0
offset_top = 227.0
offset_right = 81.0
offset_bottom = 261.0
text = "0°"
label_settings = ExtResource("2_2637j")
horizontal_alignment = 2

[node name="Label-30" type="Label" parent="."]
offset_left = 38.0
offset_top = 286.0
offset_right = 83.0
offset_bottom = 357.0
text = "-30°"
label_settings = ExtResource("2_2637j")
horizontal_alignment = 2
